trans list alignment bug fixes

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -1798,6 +1798,7 @@ ion-refresher.refresher-native.refresher-refreshing
 
     .amount-date {
       .amount {
+        text-align: right;
         font-family: BwModelicaBold;
         font-weight: 600;
       }
